# joinquant

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  Dockerfile  README.md  README.txt  docker-compose.yml  pyproject.toml
configs/: live_console.docker.json  live_console.example.json
crypto_lab/: __init__.py  backtest.py  cli.py  core_top5.py  core_top5_research.py  crypto_alpha.py  crypto_alpha_research.py  cta_data.py  cta_engine.py  cta_indicators.py  cta_research.py  cta_strategy.py  cycle_report.py  data.py  ema_backtest.py  ema_data.py  ema_research.py  ema_strategies.py  indicators.py  long_short.py  optimize_research.py  optimized_strategies.py  research.py  strategies.py
crypto_lab/live/: __init__.py  broker.py  config.py  engine.py  feed.py  models.py  notifier.py  registry.py  store.py  trade_points.py
crypto_lab/web/: __init__.py  service.py
data/okx/: BCH-USDT.csv  DOGE-USDT.csv  ETC-USDT.csv  LINK-USDT.csv  LTC-USDT.csv  SOL-USDT.csv  TRX-USDT.csv
docker/: entrypoint.sh
reports/: backtest_results.json  cross_market_report.md  crypto_alpha_report.md  crypto_alpha_results.json  cta_adversarial_review.md  cta_report.md  cta_results.json  cycle_full_report.md  cycle_full_results.json  data_manifest.json  ema_report.md  ema_results.json  optimized_backtest_results.json  optimized_strategies_report.md
tests/: test_backtest.py  test_core_top5.py  test_cta.py  test_cycle_report.py  test_data.py  test_ema.py  test_indicators.py  test_live_console.py  test_long_short.py  test_optimized_strategies.py  test_research.py
(+68 files in other folders)
